testdata/networking/networkpolicy/allow-from-all-pods-Bug1816394.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-all-pods
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: blue
  - from:
    - podSelector:
        matchLabels:
          name: black
  - from:
    - podSelector:
        matchLabels:
          name: test-pods
  podSelector:
    matchLabels:
      name: allowall
  policyTypes:
  - Ingress
