testdata/networking/networkpolicy/nw_ipblock_except.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-podselector-and-ipblock
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 10.131.0.0/24
        except:
        - 10.131.0.83/32
