testdata/networking/networkpolicy/nw_with_ns_and_ps_selector.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: namespace-pod-selector
spec:
  podSelector:
    matchLabels:
      name: test-pods
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            team: operations
        podSelector:
          matchLabels:
            name: test-pods
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            team: openshift
        podSelector:
          matchLabels:
            name: hello-pod
