testdata/networking/networkpolicy/udp8888-pod.json
{
        "kind": "Pod",
        "apiVersion":"v1",
        "metadata": {
                "name": "udp-pod"
        },
        "spec": {
                "containers": [{
                        "command": [ "/usr/bin/ncat", "-u", "-l", "8888" ],
                        "name": "udp-pod",
                        "image": "bmeng/hello-openshift"
                }],
                "restartPolicy": "Always"
        }
}
